# ai-health-coach

./: .gitignore  README.md  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
frontend/: index.html
services/: meal_service.py  openai_service.py  user_service.py
tests/: test_meal_service.py
