[project]
name = "health-coach"
version = "0.1.0"
description = "Diet advisor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==22.1.0",
    "fastapi>=0.109.0",
    "openai>=1.3.8",
    "pydantic>=2.6.0",
    "pytest>=7.0.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "sqlalchemy>=2.0.25",
    "uvicorn[standard]==0.22.0",
]
